syntax = "proto3";

package proto.event;

option go_package = "proto/event";
option java_package = "com.wheelseye.proto.event";
option java_multiple_files = true;

// import "proto/google/api/annotations.proto";

// Event service endpoints
service EventService {
  rpc HealthCheck(HealthRequest) returns (HealthResponse) {}

  // Event analytics
  rpc CaptureEvent(EventRequest) returns (EventResponse) {}
  rpc GetEvents(GetEventRequest) returns (stream GetEventResponse){}


  // App mimic
  rpc RegisterApp(RegisterAppRequest) returns(RegisterAppResponse) {}
  rpc MimicListener(ListenMimicRequest) returns(stream ListenMimicResponse) {}
  rpc MimicRecieve(MimicRecieveRequest) returns (stream MimicRecieveResponse) {}
  rpc MimicSend(MimicSendRequest) returns (MimicSendResponse) {}

  // Admin Control
  rpc InitiateMimic(InitiateMimicRequest) returns (InitiateMimicResponse) {}
}

message RegisterAppRequest {
  string user_code = 1;
}
message RegisterAppResponse {
  string uuid = 1;
}
message ListenMimicRequest {
  string uuid = 1;
}

message ListenMimicResponse {
  string action = 1;
}
message MimicRecieveRequest {
  string uuid = 1;
}

message MimicRecieveResponse {
  int32 layout_id = 1;
  map<string, string> data = 2;
}

message MimicSendRequest {
  string uuid = 1;
  int32 layout_id = 2;
  map<string, string> data = 3;
}

message MimicSendResponse {
  string response = 1;
}

// HealthResponse for health check
message HealthRequest {
  string ping = 1;
}

// HealthRequest for health check
message HealthResponse {
  string pong = 1;
}

message EventRequest {
  string event_name = 1;
}

message EventResponse {
  string response = 1;
}


message MimicStartRequest {
  string uuid = 1;
}


message ServerStreamRequest {
  string app_id = 1;
}

message MimicResponse {
  string request = 1;
}

message MimicLayoutRequest {
  int32 layout_id = 1;
  map<string, string> data = 2;
}



message GetEventRequest {
  string event_name = 1;
}

message GetEventResponse {
  string event_name = 1;
  string phone_number = 2;
}

message InitiateMimicRequest {
  string from_code = 1;
  string to_code = 2;
}

message InitiateMimicResponse{
  string response = 1;
}